# content-mapp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: n-similar.rs
src/: bin.rs  cache.rs  file_walk.rs  indexer.rs  lib.rs  main.rs  ncd.rs  web.rs
static/: file_bubble.js  file_bubble_manager.js  index.html  index.js  path_viewer.js  spring.js
