[package]
name = "content-mapp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "content_mapp_rs"
path = "src/bin.rs"

[lib]
name = "content_mapp_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
clap = { version = "4.5.1", features = ["derive"] }
flate2 = { version = "1.0.28", features = [
    "zlib-ng",
], default-features = false }
ignore = "0.4.22"
open = "5.1.0"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }

[profile.bench]
debug = true

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "n-similar"
harness = false
